--- a/README
+++ b/README
@@ -1,1 +1,6 @@
-hello
+PyTexture is an exploration tool for microstructure data. Grain orientation data from a metallic 
+microstructure (FCC or HCP) can be uploaded and various features can be extracted such as Schmid factors or 
+Taylor factors. The addition of neighbor data can be used to extract grain-neighbor features
+such as misorientations and slip transmission.
+
+PyTexture can also be used to randomly generate grain orientations if no data exists. 
